babel and other config files

--- a/ex_02_react_intro/react_intro_project_creation/Imanol-DeLaIglesia-react-portfolio/package.json
+++ b/ex_02_react_intro/react_intro_project_creation/Imanol-DeLaIglesia-react-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-router",
+  "name": "imanol-delaiglesia-react-portfolio",
   "version": "1.0.0",
   "description": "Basic skeleton codebase for React/Redux/Router applications.",
   "scripts": {
